# pinion

./: .gitignore  Cargo.toml  flake.nix
examples/: basic.rs
src/: error.rs  lib.rs  selector.rs  template.rs  xml.rs
src/template/: error.rs  mod.rs
src/xml/: error.rs  mod.rs
static/css/: mrpacker-page.css
static/xml/: home.xml  mrpacker.xml
