[package]
name = "peacock-pinion"
version = "0.1.0"
authors = ["Maxine Alexander <Max.Alexander3721@gmail.com>"]
edition = "2021"

[dependencies]
minijinja.features = ["loader"]
minijinja.version = "2.2.0"
xmltree = "0.11.0"

derive_more = { version = "1.0.0", features = [ "from" ] }
uuid = { version = "1.11.0", features = ["v4"] }
